[package]
name = "lau-information-theory"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shannon information theory: entropy, mutual information, channel capacity, source coding, and agent communication analysis"
repository = "https://github.com/SuperInstance/lau-information-theory"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }

[dev-dependencies]
approx = "0.5"
